tools/tests/errors/surf_type_03.ki
# type/operator: Dicts are unordered, '<' is rejected
discard {1: 2} < {3: 4}
